# fxdr

./: CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
cmake/Modules/: FindPandoc.cmake
doc/: CMakeLists.txt  allocate_array.md  allocate_character_array.md  allocate_unsigned_array.md  create.md  destroy.md  fxdr.md  get.md  get_array.md  get_character.md  get_character_array.md  get_character_vector.md  get_unsigned.md  get_unsigned_array.md  get_unsigned_vector.md  get_vector.md  getpos.md  getsize.md  index.md  links.md  put.md  put_array.md  put_character.md  put_character_array.md  put_character_vector.md  put_unsigned.md  put_unsigned_array.md  put_unsigned_vector.md  put_vector.md  read_file.md  setpos.md  template.in  write_file.md
src/: CMakeLists.txt  xdr.f90  xdr_utils.c
tests/: CMakeLists.txt  alloc_array_bytes.f90  alloc_array_char.f90  alloc_array_double.f90  alloc_array_float.f90  alloc_array_int16_t.f90  alloc_array_int32_t.f90  alloc_array_int64_t.f90  alloc_array_int8_t.f90  alloc_array_logical.f90  alloc_array_string.f90  alloc_array_uint16_t.f90  alloc_array_uint32_t.f90  alloc_array_uint8_t.f90  array_bool.xdr  array_char.xdr  array_double.xdr  array_float.xdr  array_int16.xdr  array_int32.xdr  array_int64.xdr  array_int8.xdr  array_string.xdr  array_uint16.xdr  array_uint32.xdr  array_uint8.xdr  assert.f90  combined_1.f90  get_array_bytes.f90  get_array_char.f90  get_array_double.f90  get_array_float.f90  get_array_int16_t.f90  get_array_int32_t.f90  get_array_int64_t.f90  get_array_int8_t.f90  get_array_logical.f90  get_array_string.f90  get_array_uint16_t.f90  get_array_uint32_t.f90  (+77 more)
